# lstm-from-scratch

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  lstm.cpp  main.cpp  util.cpp
data/dev/: src.txt  tgt.txt
data/test/: src.txt  tgt.txt
data/train/: src.txt  tgt.txt
include/: functions.hpp  layers.hpp  loss.hpp  lstm.hpp  util.hpp
include/lstm/: cell.hpp  network.hpp
